# strict-llm

./: .cursorrules  .gitignore  Cargo.toml  Justfile  README.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/core_game/: Cargo.toml
crates/core_game/src/: diagnostics.rs  gameplay.rs  lib.rs  ui.rs
crates/game_runner/: Cargo.toml
crates/game_runner/src/: main.rs  sandbox.rs
crates/guardrail_cli/: Cargo.toml
crates/guardrail_cli/src/: main.rs
crates/guardrail_core/: Cargo.toml
crates/guardrail_core/src/: analyzers.rs  config.rs  lib.rs  report.rs
crates/llm_regression/: Cargo.toml  README.md
crates/llm_regression/src/: lib.rs
crates/llm_regression/tests/: deterministic_health.rs  deterministic_spawns.rs  template.rs
crates/llm_regression/tests/snapshots/: template__combat_round.snap
docs/: dev-environment.md  llm-rust-guardrails.md  validation-matrix.md
examples/systems/: README.md
examples/systems/rts_board/: README.md
scripts/: build_wasm.ps1  validate_assets.ps1
tests/llm_regression/: README.md  template.rs
tools/llm_guardrail_cli/: README.md  guardrail.example.toml  report.example.json  report_schema.json
web/: index.html
