[package]
name = "core_game"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bevy.workspace = true
tracing.workspace = true
rand.workspace = true

[features]
default = ["native"]
native = []
native_hot_reload = ["bevy/dynamic_linking"]
wasm = ["bevy/webgl2"]

