[package]
name = "game_runner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bevy.workspace = true
core_game = { path = "../core_game", default-features = false }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["native"]
native = ["core_game/native"]
native_hot_reload = ["core_game/native_hot_reload"]
wasm = ["core_game/wasm", "dep:wasm-bindgen", "dep:console_error_panic_hook"]

