[package]
name = "guardrail_cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
guardrail_core = { path = "../guardrail_core" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

